:recycle: fix slightly

--- a/examples/sample.html
+++ b/examples/sample.html
@@ -1,5 +1,5 @@
 <div>
-    <p>This is an example page for puppy-browser.</p>
+    <p>This is an example page for puppy.</p>
     <p>You can use a tags: <a href="jump.html">Go to jump.html</a>.</p>
     <div>
         <p>You can use div tags like this.</p>
