:sparkles: add a class selector

--- a/examples/dom.html
+++ b/examples/dom.html
@@ -30,7 +30,7 @@
             display: block;
         }
 
-        div[class=inlinediv] {
+        .inlinediv {
             display: inline;
         }
     </style>
